@@ -114,7 +114,7 @@ void generateRandomPointCloud_Quat(PointCloud_Quat<T> &point, const size_t N)
 	T theta, X, Y, Z, sinAng, cosAng, mag;
 	for (size_t i=0;i<N;i++)
 	{
-		theta = M_PI * (((double)rand()) / RAND_MAX);
+		theta = nanoflann::pi_const<double>() * (((double)rand()) / RAND_MAX);
 		// Generate random value in [-1, 1]
 		X = 2 * (((double)rand()) / RAND_MAX) - 1;
 		Y = 2 * (((double)rand()) / RAND_MAX) - 1;
@@ -166,7 +166,7 @@ void generateRandomPointCloud_Orient(PointCloud_Orient<T> &point, const size_t N
 	// Generating Random Orientations
 	point.pts.resize(N);
 	for (size_t i=0;i<N;i++) {
-		point.pts[i].theta = ( 2 * M_PI * (((double)rand()) / RAND_MAX) ) - M_PI;
+		point.pts[i].theta = ( 2 * nanoflann::pi_const<double>() * (((double)rand()) / RAND_MAX) ) - nanoflann::pi_const<double>();
 	}
 }
 
