@@ -1,11 +1,12 @@
 nanoflann 1.3.0: (Unreleased)
+  * Avoid need for _USE_MATH_DEFINES in MSVC (Closes: #96)
   * Eigen::Matrix datasets: now uses std::cref() to store a reference to matrix.
   * GSOC2017 contributions by Pranjal Kumar Rai:
     * Support for dynamic datasets.
     * Support for non-Euclidean spaces: SO(2), SO(3)
 
 nanoflann 1.2.3: Released Dec 20, 2016
-  * Fixed: split plane now correctly chooses the dimensions with the largest span. 
+  * Fixed: split plane now correctly chooses the dimensions with the largest span.
     Should lead to more optimal trees.
 
 nanoflann 1.2.2: Released Nov 10, 2016
